--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
  <head>
   <meta charset="utf-8" />
-  <title>HTML5</title>
+  <title>Test doc in HTML5</title>
+  <link rel="stylesheet" href="style.css">
   <!--[if IE]>
    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
